# telegram_media_downloader

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  media_downloader.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  feature_request.yaml
.github/workflows/: code-checks.yml  dependabot-auto-merge.yml  docker-publish-release.yaml  docker-publish.yml  unittest.yml
module/: app.py  bot.py  cloud_drive.py  download_stat.py  filter.py  get_chat_history_v2.py  language.py  pyrogram_extension.py  send_media_group_v2.py  web.py
module/templates/: index.html
src/: app.rs  config.rs  filter.rs  format.rs  main.rs  webui.rs
src/app/: auth.rs  scan.rs  shutdown.rs  state.rs
src/config/: mod.rs
src/downloader/: chunks.rs  finalize.rs  media.rs  metadata.rs  mod.rs  paths.rs  progress.rs  text.rs
src/filter/: mod.rs
src/format/: mod.rs
src/webui/: mod.rs
static/: app.css  index.html
tests/: test_common.py  test_media_downloader.py
tests/module/: test_app.py
tests/utils/: test_filter.py  test_format.py  test_log.py  test_updates.py
utils/: crypto.py  file_management.py  format.py  log.py  meta.py  meta_data.py  updates.py
