[project]
name = "telegram-media-downloader"
dynamic = ["version"]
description = "A simple script to download media from telegram"
authors = [{ name = "tangyoha", email = "tangyoha@outlook.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyrogram @ https://github.com/tangyoha/pyrogram/archive/refs/heads/patch.zip",
    "PyYAML==5.3.1",
    "rich==12.5.1",
    "PyTgCrypto>=1.2.12",
    "loguru==0.6.0",
    "Werkzeug==2.2.2",
    "flask==2.2.2",
    "ply==3.11",
    "ruamel.yaml==0.17.21",
    "flask-login==0.6.2",
    "pycryptodome==3.18.0",
    "requests==2.32.3",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["media_downloader"]

[tool.setuptools.dynamic]
version = {attr = "utils.__version__"}

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ty>=0.0.51",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP"]
ignore = [
    "E402",   # module-level import not at top (legit in tests that patch sys.path)
    "E501",   # line-too-long handled by formatter
    "B007",   # unused loop variable (style)
    "B009",   # getattr with constant (style)
    "UP026",  # mock deprecated (tests need updating separately)
    "UP032",  # f-string suggestion (style)
]

[tool.ruff.lint.isort]
known-first-party = ["utils", "module", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ty]
# ponytail: ty v0.0.51 config schema still unstable; paths passed via CLI args
